fixing scrollbar filcker

--- a/src/jopit-web-components.css
+++ b/src/jopit-web-components.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 
+html {
+    overflow-y: hidden;
+}
+
 body, html, main {
     height: 100%;
     margin: 0;
